Make EchoServer integration test pass using test doubles